<resources>
    <string name="app_name">Marvel_App</string>
    <string name="written_by">Written by</string>
    <string name="comic_icon_description">Icon of Marvel Comic</string>
    <string name="error_message">Error occurred :(</string>
    <string name="find_out_more">Find out more</string>
    <string name="rectangle_up_image_description">Rectangle up image</string>
    <string name="comic_image_description">Comic image</string>
    <string name="home_bottom_navigation">Home</string>
    <string name="search_bottom_navigation">Search</string>
    <string name="empty_searching_message">Start typing to find a particular comics.</string>
    <string name="error_searching_message">There is not comic book \"%1$s\" in our library. Check the spelling and try again.</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="welcome_in_marvel_app">Welcome in Marvel App!</string>
    <string name="sign_in">Sign in</string>
    <string name="sing_up">Sign up</string>
    <string name="you_don_t_have_an_account_click_sign_up_button">You don\'t have an account? Click Sign up button</string>
    <string name="sign_up_in_marvel_app">Sign up in Marvel App!</string>
    <string name="name">Name:</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="sign_up_failure">Sign up failed</string>
    <string name="authentication_successful">Authentication successful.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="logout_successful">Logout successful</string>
    <string name="login_action_bar_title">Login</string>
    <string name="sign_up_action_bar_title">Sign Up</string>
    <string name="home_action_bar_title">Marvel Comics</string>
    <string name="detail_action_bar_title">Details</string>
    <string name="settings_action_bar_title">Settings</string>
    <string name="provide_email_and_password">You have to provide email and password</string>
    <string name="cancel">Cancel</string>
    <string name="search_for_a_comic_book">Search for a comic book</string>
    <string name="search_icon">Search icon</string>
    <string name="invalid_email_error_msg">Error. Check email spelling</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="preference_dark_theme">com.example.marvel_app.preference_dark_theme</string>
    <string name="favourites">Favourites</string>
    <string name="empty_favourites_message">There\'s no comics added to your favourites</string>
</resources>