<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.marvel_app.home.HomeFragment"
        android:label="@string/home_action_bar_title"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_favouritesFragment"
            app:destination="@id/favouritesFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.marvel_app.detail.DetailFragment"
        android:label="@string/detail_action_bar_title"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="selectedComic"
            app:argType="com.example.marvel_app.model.Comic" />
        <action
            android:id="@+id/action_detailFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.marvel_app.login.LoginFragment"
        android:label="@string/login_action_bar_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_singUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.marvel_app.login.SignUpFragment"
        android:label="@string/sign_up_action_bar_title"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.marvel_app.settings.SettingsFragment"
        android:label="@string/settings_action_bar_title"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_settingsFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/favouritesFragment"
        android:name="com.example.marvel_app.favourites.FavouritesFragment"
        android:label="FavouritesFragment"
        tools:layout="@layout/fragment_favourites">
    <action
            android:id="@+id/action_favouritesFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_favouritesFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>