<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/login_welcome_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_screen_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:textColor="@color/black"
        android:textSize="@dimen/login_screen_welcome_text_size"
        android:text="@string/welcome_in_marvel_app"
        tools:text="Welcome in Marvel App!"/>

    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_welcome_textView">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="@color/black"
            tools:text="Login: " />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_linear_layout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/password"
            tools:text="Password: " />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/login_screen_button_margin"
        app:layout_constraintTop_toBottomOf="@+id/password_linear_layout"/>

    <TextView
        android:id="@+id/not_registered_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="@dimen/login_screen_margin"
        android:layout_marginStart="@dimen/login_screen_margin"
        android:layout_marginEnd="@dimen/login_screen_margin"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        android:text="@string/you_don_t_have_an_account_click_sign_up_button"
        tools:text="You don't have an account? Click Sign up button"/>

    <Button
        android:id="@+id/go_to_sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sing_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/login_screen_margin"
        android:layout_marginBottom="@dimen/login_screen_button_margin"
        android:layout_marginStart="@dimen/login_screen_button_margin"
        android:layout_marginEnd="@dimen/login_screen_button_margin"
        app:layout_constraintTop_toBottomOf="@+id/not_registered_textView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>